clean up some issues